# charm-ops-sunbeam

./: .gitignore  .gitreview  .stestr.conf  README.rst  aso-charm-init.sh  concepts.rst  fetch-libs.sh  howto-config-context.rst  howto-expose-services.rst  howto-pebble-handler.rst  howto-relation-handler.rst  howto-write-charm.rst  pyproject.toml  requirements.txt  setup.cfg  setup.py  sunbeam-charm-init.sh  test-requirements.txt  tox.ini  writing-OS-API-charm.rst
.github/workflows/: tox.yaml
advanced_sunbeam_openstack/: __init__.py  adapters.py  charm.py  config_contexts.py  container_handlers.py  core.py  cprocess.py  guard.py  interfaces.py  relation_handlers.py  templating.py  test_utils.py
advanced_sunbeam_openstack/ovn/: __init__.py  charm.py  container_handlers.py  relation_handlers.py
doc/: concepts.rst  deploy-sunbeam-charms.rst  howto-config-context.rst  howto-expose-services.rst  howto-pebble-handler.rst  howto-relation-handler.rst  reference-bundles.rst  sunbeam.yaml  troubleshooting-sunbeam-deployment.md  writing-OS-API-charm.rst
doc/bundles/: full.yaml  minimal.yaml
lib/charms/: NOTE.txt
ops_sunbeam/: charm.py  compound_status.py  config_contexts.py  container_handlers.py  core.py  guard.py  interfaces.py  job_ctrl.py  relation_handlers.py  templating.py  test_utils.py
ops_sunbeam/ovn/: charm.py  (+3 more)
shared_code/: aso-charm-init.py  config-api.yaml  config-ceph-options.yaml  requirements.txt  sunbeam-charm-init.py  templates
unit_tests/: __init__.py  test_charms.py  test_compound_status.py  test_core.py  test_job_ctrl.py  test_templating.py
(+60 files in other folders)
