[metadata]
name = advanced_sunbeam_openstack
summary = Charm lib for OpenStack Charms using operator framework
version = 0.0.1.dev1
description-file =
    README.rst
author = OpenStack Charmers
author-email = openstack-charmers@lists.ubuntu.com
classifier =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Topic :: System
    Topic :: System :: Installation/Setup
    opic :: System :: Software Distribution
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    License :: OSI Approved :: Apache Software License

